<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"  translatable="false">Music Stop</string>
    <string name="app_author" translatable="false">Constantin Laurent</string>
    <string name="kill_time"  translatable="false">900</string>
     <string name="about_site_url" translatable="false">https://github.com/ragusa87/android-musicStop</string>
    
    <string name="prefs_title">Settings</string>
	<string name="btn_go_txt">Start the countdown</string>
	
	<string name="txt_intro">The music will stop when the countdown is over</string>
		
	<string name="numberPickerHint">Time in second before stopping the music</string>
	<string name="menu_test_label">Stop the music now</string>
	<string name="menu_pref_label">Settings</string>
	
    <!-- A Propos -->
    <string name="about_site">Website</string>
    <string name="about_licence">Licence</string>
   	<string name="about_label">About</string>
    
	<string name="action_cancel">Countdown cancelled!</string>
	<string name="action_stopped">Music Stopped!</string>
	<string name="error_bad_method">Invalid method. Using the default one!</string>
	<string name="error_bad_kill_time">Invalid time!</string>
			
				
	<!-- notifications -->
	<!-- Use %duration for the total countdown time -->
	<!-- Use %remaining for the remaining time -->
	<!--  The unit is automatically added -->
	<string name="notify_title">The music will stop</string>
	<string name="notify_progress">%remaining remaining</string>
	<string name="notify_start">MusicStop is running for %duration</string>
		
	<string name="notify_test">Immediate stop</string>
	
	<!--  
	 Used to convert XXX seconds to something like:
	 << 2 days 21 minutes 1 second remaining >>
	 
	 !! Array's Size MUST BE 4
	-->
	<string-array name="unit">
	    <item>day</item>
	    <item>hour</item>
	    <item>minute</item>
	    <item>second</item>    
	</string-array>
	<string-array name="units">
	    <item>days</item>
	    <item>hours</item>
	    <item>minutes</item>
	    <item>seconds</item>    
	</string-array>
	
	<string name="pref_method_title">Method to stop music</string>
	<string name="pref_method_pickup">Favorite stop method</string>
	<string name="pref_killtime_title">Default countdown duration</string>
	<string name="pref_killtime_pickup">Duration (in seconds)</string>
	<string name="pref_method_fadein">Fade volume out</string>
</resources>