<?xml version="1.0" encoding="utf-8"?>
<!-- This is a primitive example showing the different types of preferences available. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_method_title" >
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/prefListArray"
            android:entryValues="@array/prefListValues"
            android:key="prefMethods"
            android:title="@string/pref_method_pickup" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_killtime_title" >
        <EditTextPreference
            android:defaultValue="@string/kill_time"
            android:key="prefDuration"
            android:numeric="integer"
            android:title="@string/pref_killtime_pickup" />
    </PreferenceCategory>

</PreferenceScreen>