<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:padding="3dp"
    android:gravity="center"
        android:orientation="vertical"
    >

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/about_label"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            android:src="@drawable/simpleicon" />

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/about_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/app_author"
            android:textSize="18sp" />

</LinearLayout>